<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rose"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/source_sans_pro_bold"
        android:text="@string/bigtitle"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="115dp"
        android:fontFamily="@font/source_sans_pro_bold"
        android:text="@string/intro"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="150dp"
        android:text="CALCULATE NOW"
        android:background="#e6aa6b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.488" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="325dp"
        android:layout_height="254dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="299dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/zakatgold2" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:text="@string/ayat"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>