<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rose"
    tools:context=".AboutUs">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="195dp"
        android:layout_height="25dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:gravity="center|left"
        android:text="2020975329@student.uitm.edu.my"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/source_sans_pro_black"
        android:text="Contact Us"
        android:textColor="#DAC09B"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="27dp"
        android:layout_height="23dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/profileuser" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="29dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/youtube" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="239dp"
        android:layout_height="23dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:gravity="center|left"
        android:text="Muhammad Arif Haikal bin Meli"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="180dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:text="Version 1.1"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="239dp"
        android:layout_height="23dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:gravity="center|left"
        android:text="Muhammad Farid bin Muhammad Dahri"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="27dp"
        android:layout_height="23dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/profileuser" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/link" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="195dp"
        android:layout_height="25dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:gravity="center|left"
        android:text="2020984569@student.uitm.edu.my"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/source_sans_pro_black"
        android:text="Our Website"
        android:textColor="#DAC09B"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="29dp"
        android:layout_height="23dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/gmail" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="29dp"
        android:layout_height="23dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/gmail" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:text="@string/copyright"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="157dp"
        android:layout_height="176dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/zakatlogoicon" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="387dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="Our application is developed to help in calculating the estimation amount payable for zakat payment in gold keeping."
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/github"
        android:layout_width="91dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:text="@string/github"
        android:textColorLink="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/youtube"
        android:layout_width="268dp"
        android:layout_height="27dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:text="@string/youtube"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/github" />


</androidx.constraintlayout.widget.ConstraintLayout>